// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a comment 1`] = `
<div>
  <div>
    <i>
      Chris Ames
    </i>
  </div>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Ello! Pretend you&#8217;re reading this comment with an English accent.</p>
      ",
      }
    }
  />
</div>
`;

exports[`should render a list of comments 1`] = `
Array [
  <div>
    <div>
        <i>
            Chris Ames
        </i>
    </div>
    <p
        dangerouslySetInnerHTML={
            Object {
                "__html": "<p>Ello! Pretend you&#8217;re reading this comment with an English accent.</p>
            ",
              }
        }
    />
</div>,
  <div>
    <div>
        <i>
            Jared Erickson
        </i>
    </div>
    <p
        dangerouslySetInnerHTML={
            Object {
                "__html": "<p>Non-breaking text is my favorite!</p>
            <p>Super/Duper/Long/NonBreaking/Path/Name/To/A/File/That/Is/Way/Deep/Down/In/Some/Mysterious/Remote/Desolate/Part/Of/The/Operating/System/To/A/File/That/Just/So/Happens/To/Be/Strangely/Named/Supercalifragilisticexpialidocious.txt</p>
            ",
              }
        }
    />
</div>,
]
`;
